# quality-management-system

./: Dockerfile  LICENSE  README.md  crosscompile.bat  crosscompile.sh  manager.7z  render.yaml
.github/workflows/: ci-cd.yml
backend/: CMakeLists.txt
backend/include/: api_handler.h  statistics.h
backend/src/: api_handler.cpp  main.cpp  statistics.cpp
docker/: Dockerfile.backend  Dockerfile.crosscompile  Dockerfile.frontend  Dockerfile.render  docker-compose.yml  entrypoint.sh  nginx-backend.conf  nginx.conf  start-backend.sh  startup.sh
frontend/: .env.production  package-lock.json  package.json
frontend/docs/: api.md
frontend/public/: index.html  manifest.json
frontend/src/: index.tsx  styles.css
frontend/src/components/charts/: CapabilityAnalysis.tsx  ControlChart.tsx  Histogram.tsx
frontend/src/pages/: Dashboard.tsx
frontend/src/services/: api.ts
frontend/src/types/: data-input.ts  index.ts
frontend/src/utils/: animation.ts
